--- a/css/style.css
+++ b/css/style.css
@@ -17,7 +17,6 @@ body {
     line-height: 1.5;
     font-size: 16px;
     font-family: 'Poppins' sans-serif;
-
 }
 
 * {
@@ -57,7 +56,7 @@ ul {
 .section.active {
     z-index: 2;
     opacity: 1;
-    animation: slideSection 1s ease;
+    animation: slideSection .8s ease;
 
 }
 @keyframes slideSection {
@@ -336,9 +335,11 @@ h3.my-profession{
     top: -40px;
 }
 .home .home-img img {
-    margin: auto;
-    border-radius: 5px;
+    margin:auto;
+    width: 400px;
+    border-radius: 8px;
     height: 400px;
+    object-fit: cover;
 }
 /*About*/
 .about .about-content {
@@ -440,6 +441,7 @@ h3.my-profession{
     flex: 0 0 50%;
     max-width: 50%;
     margin-top: 30px;
+   
 }
 
 .about .about-content h3.title {
@@ -459,7 +461,7 @@ h3.my-profession{
     border: 1px solid var(--bg-black-50);
     border-radius: 10px;
     width: 100%;
-    position: relative;
+    position:relative;
 }
 
 .about .about-content .timeline .timeline-item {
